# stock-data-tracking

./: .env.example  .gitignore  README.md  pyproject.toml
config/: logging.yaml  settings.yaml
scripts/: fetch_earnings.py  fetch_options.py  fetch_tick_data.py
src/: main.py  scheduler.py
src/collectors/: base.py  earnings.py  options.py  tick_data.py
src/models/: schemas.py
src/storage/: parquet_store.py  postgres_store.py
src/utils/: rate_limiter.py
tests/: test_rate_limiter.py  test_schemas.py  test_storage.py
